--- a/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
+++ b/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
@@ -49,7 +49,7 @@
 								</div>
 								<div class="col text-end">
 									<p style="height:27px;">&nbsp;</p>
-									<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="getSettle()" data-test="create-button" onsubmit="return false;">Settlement</button>
+									<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="getSettle()" data-test="create-button" onsubmit="return false;">Generate</button>
 									<button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px" id="downloadExcel">Download</button>
 								</div>
 							</div>
