--- a/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
@@ -75,12 +75,13 @@
 								</form>
 							<!-- </div> -->
 							</div>
-							<div class="col"></div>
+							<div class="col ms-3">
+								<button name="btnSave" type="button" class="btn btn-secondary" style="padding: 4px 10px; color: white; font-size: 13px"
+										onclick="setSaveUploadFile()" data-test="edit-button">Upload</button>
+							</div>
 							<div class="col text-end align-items-center me-2">
 								<button name="btnExcelDown" type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px" id="downloadExcel"
 										onclick="getExcelList()" data-test="edit-button">Download</button>
-								<button name="btnSave" type="button" class="btn btn-secondary" style="padding: 4px 10px; color: white; font-size: 13px"
-										onclick="setSaveUploadFile()" data-test="edit-button">Save</button>
 							</div>
 						</div>
 					</div>
