--- a/src/main/resources/templates/views/adm/srv/ADMSRV002M0.html
+++ b/src/main/resources/templates/views/adm/srv/ADMSRV002M0.html
@@ -56,8 +56,8 @@
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-device-imac-cog"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 17h-8a1 1 0 0 1 -1 -1v-12a1 1 0 0 1 1 -1h16a1 1 0 0 1 1 1v8" /><path d="M3 13h13" /><path d="M8 21h4" /><path d="M10 17l-.5 4" /><path d="M19.001 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M19.001 15.5v1.5" /><path d="M19.001 21v1.5" /><path d="M22.032 17.25l-1.299 .75" /><path d="M17.27 20l-1.3 .75" /><path d="M15.97 17.25l1.3 .75" /><path d="M20.733 20l1.3 .75" /></svg>
 							</div>
 							<div class="text-center">
-								<p class="text-black fs-4 fw-bold mt-3 mb-3">Cost of subscription up to now&emsp;</p>
-								<p class="mb-2"><span id="serviceCost" class="text-primary fs-1 fw-bold mb-2"></span>&nbsp;<span class="fs-5">USD</span></p>
+								<p class="fs-4 mt-3 mb-3">Cost of subscription up to now&emsp;</p>
+								<p class="mb-2"><span id="serviceCost" class="text-primary fs-1 mb-2"></span>&nbsp;<span class="fs-5">USD</span></p>
 								<p class="fs-3 mb-3"><span id="serviceChange"></span>&nbsp;<span id="selectedOption"></span></p>
 							</div>
 						</a>
@@ -68,8 +68,8 @@
 			                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-chart-histogram"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 3v18h18" /><path d="M20 18v3" /><path d="M16 16v5" /><path d="M12 13v8" /><path d="M8 16v5" /><path d="M3 11c6 0 5 -5 9 -5s3 5 9 5" /></svg>
 			                </div>
 							<div class="text-center">
-								<p class="text-black fs-4 fw-bold mt-3 mb-3">Cost of storage up to now</p>
-								<p class="mb-2"><span id="storageCost" class="text-success fs-1 fw-bold mb-2"></span>&nbsp;<span class="fs-5">USD</span></p>
+								<p class="fs-4 mt-3 mb-3">Cost of storage up to now</p>
+								<p class="mb-2"><span id="storageCost" class="text-success fs-1 mb-2"></span>&nbsp;<span class="fs-5">USD</span></p>
 								<p id="storageUsage" class="fs-3 mb-3"></p>
 							</div>
 						</a>
@@ -80,20 +80,20 @@
 			                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-brand-google-analytics"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 9m0 1.105a1.105 1.105 0 0 1 1.105 -1.105h1.79a1.105 1.105 0 0 1 1.105 1.105v9.79a1.105 1.105 0 0 1 -1.105 1.105h-1.79a1.105 1.105 0 0 1 -1.105 -1.105z" /><path d="M17 3m0 1.105a1.105 1.105 0 0 1 1.105 -1.105h1.79a1.105 1.105 0 0 1 1.105 1.105v15.79a1.105 1.105 0 0 1 -1.105 1.105h-1.79a1.105 1.105 0 0 1 -1.105 -1.105z" /><path d="M5 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /></svg>
 							</div>
 							<div class="text-center">
-								<p class="text-black fs-4 fw-bold mt-3 mb-3">Cost of job run up to now</p>
-								<p class="mb-2"><span id="jobrunCost" class="text-warning fs-1 fw-bold mb-2"></span>&nbsp;<span class="fs-5">USD</span></p>
+								<p class="fs-4 mt-3 mb-3">Cost of job run up to now</p>
+								<p class="mb-2"><span id="jobrunCost" class="text-warning fs-1 mb-2"></span>&nbsp;<span class="fs-5">USD</span></p>
 								<p id="jobrunUsage" class="fs-3 mb-3"></p>
 							</div>
 						</a>
 					</div>
 					<div class="col-sm-6 col-xl-3">
 						<a class="card card-link card-link-pop d-flex flex-column">
-               				<div class="ribbon ribbon-top bg-azure">
+               				<div class="ribbon ribbon-top bg-cyan">
                  				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-list-details"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M13 5h8" /><path d="M13 9h5" /><path d="M13 15h8" /><path d="M13 19h5" /><path d="M3 4m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v4a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /><path d="M3 14m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v4a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /></svg>
 							</div>
 							<div class="text-center">
-								<p class="text-black fs-4 fw-bold mt-3 mb-3">Total cost up to now</p>
-								<p class="mb-2"><span id="totalUsage" class="text-azure fs-1 fw-bold mb-2"></span>&nbsp;<span class="fs-5">USD</span></p>
+								<p class="text-black fs-4 fw-bold mt-3 mb-3">TOTAL COST up to now</p>
+								<p class="mb-2"><span id="totalUsage" class="text-cyan fs-1 fw-bold mb-2"></span>&nbsp;<span class="fs-5">USD</span></p>
 								<p class="mb-3"><span id="estimatedUsage" class="fs-3 mb-2"></span>&nbsp;<span class="fs-5">(estimate of this month)</span></p>
 							</div>
 						</a>
@@ -188,7 +188,7 @@
 	              position: "left",
 	              title: {
 	                display: true,
-	                text: "Storage (KB)",
+	                text: "STORAGE (KB)",
 	                font: {
 	                  size: 12,
 	                },
@@ -207,7 +207,7 @@
 		              position: "left",
 		              title: {
 		                display: true,
-		                text: "Run Time (Second)",
+		                text: "RUN TIME (Second)",
 		                font: {
 		                  size: 12,
 		                },
@@ -231,15 +231,15 @@
 	              },
 	              title: {
 	                display: true,
-	                text: "Cost (USD)",
+	                text: "TOTAL COST (USD)",
 	                font: {
 	                  size: 12,
 	                },
-	                color: "rgba(66, 153, 225, 1)",
+	                color: "rgba(23, 162, 184, 1)",
 	              },
 	              ticks: {
 	                beginAtZero: false,
-	                color: "rgba(66, 153, 225, 1)",
+	                color: "rgba(23, 162, 184, 1)",
 	              },
 	            },
 	          },
@@ -353,7 +353,7 @@
 	            label: "Cost up to now",
 	            data: totalCost,
 	            fill: false,
-	            borderColor: "rgba(66, 153, 225, 1)",
+	            borderColor: "rgba(23, 162, 184, 1)",
 	            yAxisID: "y1",
 	            spanGaps: true,
 	            borderWidth: 4,
