--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -143,6 +143,17 @@
 				color: #007bff !important; /* Change this to your preferred hover color */
 				text-decoration: underline;
 			}
+			.chartcontainer {
+				position:relative;
+				min-height:auto;
+				width:100%;
+				display: flex;
+				flex-grow:1;
+			}
+			.chartcontainer canvas {
+				width: 100% !important;
+				height: auto !important;
+			}
 
 			
 
